--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -11,19 +11,22 @@
     </head>
     <body>
         <div class="page-header">
-            <h1><a href="https://en.wikipedia.org/wiki/Django" class="external_link" id="link_to_wiki_page">Django Girls Blog</a></h1>
+            <h1><a href="/" class="external_link" id="link_to_wiki_page">Django Girls Blog</a></h1>   
         </div>
         <div class="content container">
             <div class="row">
                 <div class="col-md-8">
                     {% block content %}
-    {% for post in posts %}
+                    {% for post in posts %}
         <div class="post">
+            <img src="{% static 'images/star.png' %}">
             <div class="date">
                 {{ post.published_date }}
             </div>
             <h2><a href="">{{ post.title }}</a></h2>
             <p>{{ post.text|linebreaksbr }}</p>
+            <img class="woman" src="{% static 'images/woman-in-tech.jpeg' %}">
+
         </div>
     {% endfor %}
 {% endblock %}
